--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>cuddle-date-connect</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Pet Match</title>
+    <meta name="description" content="Connect with loving pet owners for breeding, find trusted pet sitters, and access veterinary services" />
+    <meta name="author" content="Pet Match" />
 
-    <meta property="og:title" content="cuddle-date-connect" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Pet Match" />
+    <meta property="og:description" content="Connect with loving pet owners for breeding, find trusted pet sitters, and access veterinary services" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
