--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pet Match</title>
+    <title>pet-match</title>
     <meta name="description" content="Connect with loving pet owners for breeding, find trusted pet sitters, and access veterinary services" />
     <meta name="author" content="Pet Match" />
 
     <meta property="og:title" content="Pet Match" />
     <meta property="og:description" content="Connect with loving pet owners for breeding, find trusted pet sitters, and access veterinary services" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/paw-heart.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@pawmatch" />
+    <meta name="twitter:image" content="/paw-heart.svg" />
+    <link rel="icon" type="image/svg+xml" href="/paw-heart.svg" />
+    <link rel="shortcut icon" type="image/x-icon" href="/paw-heart.svg" />
   </head>
 
   <body>
